Created function to render questions
Created renderQuiz function and worked on SOC by setting up modules between the question bank file, the working quiz file, and the main script file.
And I am in utter disbelief that everything is working as expected. Feeling both super proud of myself for managing to summon all of this from memory (no AI yet!), and terrified of the next roadblock I'll inevitably face. Here's to learning!

--- a/quiz.html
+++ b/quiz.html
@@ -12,14 +12,13 @@
       <!-- TODO load header partial here -->
     </header>
     <main>
-      <div class="intro">
-        <h1>Quiz Master</h1>
-        <p>Test your knowledge on this super random subject.</p>
-        <button><a href="/quiz.html">Start!</a></button>
+      <div class="quizInterface">
+        <!-- quiz to load here dynamically -->
       </div>
     </main>
     <footer>
       <!-- TODO load footer partial here -->
     </footer>
+    <script src="/scripts/script.js" type="module" defer></script>
   </body>
 </html>
