Created score tracker!
Created a simple score tracker within the  quiz.js file, and deleted the preemptively created score.js file since the code turned out to be simpler than I had anticipated!

--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,9 @@
       <!-- TODO load header partial here -->
     </header>
     <main>
+      <div class="scoreTracker">
+        <!-- score tracker to load here dynamically -->
+      </div>
       <div class="quizInterface">
         <!-- quiz to load here dynamically -->
       </div>
