--- a/result.html
+++ b/result.html
@@ -15,6 +15,7 @@
       <div class="intro">
         <h1>Quiz Master</h1>
         <p>Quiz completed: here's how you did!</p>
+        <div class="finalScore"><!--TODO display final score here--></div>
       </div>
       <div class="finalRedirection">
         <button><a href="index.html">Home</a></button>
