Updated score tracker display and started developing final score display
Need to brainstorm how to carry current score over from quiz page to results page...

--- a/result.html
+++ b/result.html
@@ -25,5 +25,6 @@
     <footer>
       <!-- TODO load footer partial here -->
     </footer>
+    <script src="/scripts/result.js" type="module" defer></script>
   </body>
 </html>
