Added home button to quiz page
Made the sensible decision of adding a 'home' button to the quiz page so users are not stuck once the quiz begins

--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,7 @@
       <!-- TODO load header partial here -->
     </header>
     <main>
+      <button><a href="index.html">Home</a></button>
       <div class="scoreTracker">
         <!-- score tracker to load here dynamically -->
       </div>
