Added class notes for future implementation
Develop these asap!

--- a/quiz.html
+++ b/quiz.html
@@ -26,3 +26,9 @@
     <script src="/scripts/script.js" type="module" defer></script>
   </body>
 </html>
+
+//TODO use class for crud portion of adding new questions //TODO for CRUD class
+AND finalScore, before storing to local storage, convert string to JSON, then
+the other way around when pulled from local storage //TODO try to get everything
+working an dpresentable by Monday so I can spend the last week before the 3rd
+just cleaning it up and optimizing it
