Started setting up api integration
Created fetch function in the data file to retrieve questions from opentdb, created startQuiz function to load quiz with fetched questions, updated scripts with startQuiz. Not quite working yet, but committing real quick since a lot of changes have been made. Started setting up for CRUD as well (too eager lol).

--- a/addQuestion.html
+++ b/addQuestion.html
@@ -12,17 +12,20 @@
       <!-- TODO load header partial here -->
     </header>
     <main>
-      <button><a href="index.html">Home</a></button>
-      <div class="scoreTracker">
-        <!-- score tracker to load here dynamically -->
+      <div class="intro">
+        <h1>Quiz Master</h1>
+        <p>Quiz completed: here's how you did!</p>
+        <div class="finalScore"><!--TODO display final score here--></div>
       </div>
-      <div class="quizInterface">
-        <!-- quiz to load here dynamically -->
+      <div class="addQuestionForm"></div>
+      <div class="finalRedirection">
+        <button><a href="index.html">Home</a></button>
+        <button><a href="quiz.html">Start quiz!</a></button>
       </div>
     </main>
     <footer>
       <!-- TODO load footer partial here -->
     </footer>
-    <script src="/scripts/script.js" type="module" defer></script>
+    <script src="/scripts/crud.js" type="module" defer></script>
   </body>
 </html>
