--- a/index.html
+++ b/index.html
@@ -15,8 +15,33 @@
       <div class="intro">
         <h1>Quiz Master</h1>
         <p>Test your knowledge on this super random subject.</p>
-        <button><a href="/quiz.html">Start!</a></button>
       </div>
+      <div class="quizSelections">
+        <form id="quiz-settings">
+          <label
+            >Category:
+            <select id="category">
+              <option value="">Any</option>
+              <option value="9">General Knowledge</option>
+              <option value="18">Science: Computers</option>
+              <option value="23">History</option>
+            </select>
+          </label>
+
+          <label
+            >Difficulty:
+            <select id="difficulty">
+              <option value="easy">Easy</option>
+              <option value="medium">Medium</option>
+              <option value="hard">Hard</option>
+            </select>
+          </label>
+
+          <button type="submit"><a href="/quiz.html">Start Quiz</a></button>
+        </form>
+      </div>
+
+      <button><a href="/addQuestion.html">Add your own question</a></button>
     </main>
     <footer>
       <!-- TODO load footer partial here -->
