Troubleshooting console error messages
For every error I fix, I get a new one T-T
Also continued developing the crud portion

--- a/addQuestion.html
+++ b/addQuestion.html
@@ -13,15 +13,19 @@
     </header>
     <main>
       <div class="intro">
-        <h1>Quiz Master</h1>
-        <p>Quiz completed: here's how you did!</p>
-        <div class="finalScore"><!--TODO display final score here--></div>
+        <h1>Quiz Master</h1>      
+      <p>Submit your own questions to the quiz, or clear all previously submitted questions.</p>
       </div>
-      <div class="addQuestionForm"></div>
+      <div class="crud">
+        <form class="addQuestionForm">
+
+        </form>
+        <button class="clearSubmittedQuestions">Clear all previously submitted questions</button>
+      </div>
       <div class="finalRedirection">
         <button><a href="index.html">Home</a></button>
         <button><a href="quiz.html">Start quiz!</a></button>
-      </div>
+
     </main>
     <footer>
       <!-- TODO load footer partial here -->
