--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
             </select>
           </label>
 
-          <button type="submit"><a href="/quiz.html">Start Quiz</a></button>
+          <button type="submit">Start Quiz</button>
         </form>
       </div>
 
-      <button><a href="/addQuestion.html">Add your own question</a></button>
+      <button>
+        <a href="/addQuestion.html" target="_blank">Add your own question</a>
+      </button>
     </main>
     <footer>
       <!-- TODO load footer partial here -->
+      <script src="/scripts/script.js" type="module" defer></script>
     </footer>
   </body>
 </html>
