--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <div class="intro">
         <h1>Quiz Master</h1>
-        <p>Test your knowledge on this super random subject.</p>
+        <p>Select the quiz category and difficulty level.</p>
       </div>
       <div class="quizSelections">
         <form id="quiz-settings">
