--- a/addQuestion.html
+++ b/addQuestion.html
@@ -18,7 +18,7 @@
       <p>Submit your own questions to the quiz, or clear all previously submitted questions.</p>
       </div>
       <div class="crud">
-        <form class="newQuestionForm">
+        <form class ="newQuestionForm">
           <!-- Input: difficulty -->
           <label for="newDiff">Difficulty level:</label>
           <select name="newDiff" id="newDiff" required>
@@ -62,5 +62,7 @@
       <!-- TODO load footer partial here -->
     </footer>
     <script src="/scripts/script.js" type="module" defer></script>
+    <script src="/scripts/crud.js" type="module" defer></script>
+    <script src="/scripts/quiz.js" type="module" defer></script>
   </body>
 </html>
