--- a/quiz.html
+++ b/quiz.html
@@ -24,5 +24,6 @@
       <!-- TODO load footer partial here -->
     </footer>
     <script src="/scripts/script.js" type="module" defer></script>
+    <script src="/scripts/crud.js" type="module" defer></script>
   </body>
 </html>
