--- a/addQuestion.html
+++ b/addQuestion.html
@@ -14,48 +14,99 @@
     <main>
       <div class="intro">
         <h1>Quiz Master</h1>
-        <h2>Add Your Own</h2>      
-      <p>Submit your own questions to the quiz, or clear all previously submitted questions.</p>
+        <h2>Add Your Own</h2>
+        <p>
+          Submit your own questions to the quiz, or clear all previously
+          submitted questions.
+        </p>
       </div>
       <div class="crud">
-        <form class ="newQuestionForm">
+        <form class="newQuestionForm">
           <!-- Input: difficulty -->
           <label for="newDiff">Difficulty level:</label>
           <select name="newDiff" id="newDiff" required>
             <option value="easy">Easy</option>
             <option value="medium">Medium</option>
             <option value="hard">Hard</option>
-          </select> <br>
+          </select>
+          <br />
           <!-- Input: category -->
           <label for="newCat">Category:</label>
-          <select name="newCat" id="newCat"required>
+          <select name="newCat" id="newCat" required>
             <option value="cat1">Category 1</option>
             <option value="cat2">Category 2</option>
             <option value="cat3">Category 3</option>
-          </select> <br>
+          </select>
+          <br />
           <!-- Input: question -->
           <label for="newQuestion">Question:</label>
-          <input type="text" id="newQuestion" name="newQuestion" required minlength="4" maxlength="100" required/> <br>
+          <input
+            type="text"
+            id="newQuestion"
+            name="newQuestion"
+            minlength="4"
+            maxlength="100"
+            required
+          />
+          <br />
           <!-- Input: correct answer -->
           <label for="newCorrectAnswer">Correct answer:</label>
-          <input type="text" class="newCorrectAnswer" name="newCorrectAnswer" required minlength="1" maxlength="50" required/> <br>
+          <input
+            type="text"
+            class="newCorrectAnswer"
+            name="newCorrectAnswer"
+            required
+            minlength="1"
+            maxlength="50"
+            required
+          />
+          <br />
           <!-- Input: incorrect answers -->
           <label for="newIncorrectAnswer">Incorrect answers:</label>
-          <input type="text" class="newIncorrectAnswer" name="newIncorrectAnswer" required minlength="1" maxlength="50" required/> <br>
-          <input type="text" class="newIncorrectAnswer" name="newIncorrectAnswer" required minlength="1" maxlength="50" required/> <br>
-          <input type="text" class="newIncorrectAnswer" name="newIncorrectAnswer" required minlength="1" maxlength="50" required/> <br>
+          <input
+            type="text"
+            class="newIncorrectAnswer"
+            name="newIncorrectAnswer"
+            required
+            minlength="1"
+            maxlength="50"
+            required
+          />
+          <br />
+          <input
+            type="text"
+            class="newIncorrectAnswer"
+            name="newIncorrectAnswer"
+            required
+            minlength="1"
+            maxlength="50"
+            required
+          />
+          <br />
+          <input
+            type="text"
+            class="newIncorrectAnswer"
+            name="newIncorrectAnswer"
+            required
+            minlength="1"
+            maxlength="50"
+            required
+          />
+          <br />
 
           <button type="submit">Submit my question</button>
         </form>
-        <br>
+        <br />
         <h2>Submitted Questions</h2>
         <ul id="questionList"></ul>
-        <button class="clearSubmittedQuestions">Clear all previously submitted questions</button>
+        <button class="clearSubmittedQuestions">
+          Clear all previously submitted questions
+        </button>
       </div>
-      <br>
+      <br />
       <div class="finalRedirection">
         <button><a href="index.html">Home</a></button>
-
+      </div>
     </main>
     <footer>
       <!-- TODO load footer partial here -->
