Added new categories and made submit button disappear
Made submit button disappear once selections are submitted and reappear once quiz is reloaded. Added new quiz category selections to landing page and add question page

--- a/addQuestion.html
+++ b/addQuestion.html
@@ -33,9 +33,22 @@
           <!-- Input: category -->
           <label for="newCat">Category:</label>
           <select name="newCat" id="newCat" required>
-            <option value="cat1">Category 1</option>
-            <option value="cat2">Category 2</option>
-            <option value="cat3">Category 3</option>
+            <option value="">Any</option>
+            <option value="9">General Knowledge</option>
+            <option value="10">Books</option>
+            <option value="11">Film</option>
+            <option value="12">Music</option>
+            <option value="14">Televison</option>
+            <option value="15">Video Games</option>
+            <option value="17">Science & Nature</option>
+            <option value="18">Computers</option>
+            <option value="20">Mythology</option>
+            <option value="21">Sports</option>
+            <option value="22">Geography</option>
+            <option value="23">History</option>
+            <option value="25">Art</option>
+            <option value="27">Animals</option>
+            <option value="28">Vehicles</option>
           </select>
           <br />
           <!-- Input: question -->
