--- a/index.html
+++ b/index.html
@@ -23,8 +23,20 @@
             <select id="category">
               <option value="">Any</option>
               <option value="9">General Knowledge</option>
-              <option value="18">Science: Computers</option>
+              <option value="10">Books</option>
+              <option value="11">Film</option>
+              <option value="12">Music</option>
+              <option value="14">Televison</option>
+              <option value="15">Video Games</option>
+              <option value="17">Science & Nature</option>
+              <option value="18">Computers</option>
+              <option value="20">Mythology</option>
+              <option value="21">Sports</option>
+              <option value="22">Geography</option>
               <option value="23">History</option>
+              <option value="25">Art</option>
+              <option value="27">Animals</option>
+              <option value="28">Vehicles</option>
             </select>
           </label>
 
