--- a/result.html
+++ b/result.html
@@ -19,7 +19,7 @@
       </div>
       <div class="finalRedirection">
         <button><a href="index.html">Home</a></button>
-        <button><a href="quiz.html">Try again!</a></button>
+        <!-- <button><a href="quiz.html">Try again!</a></button> -->
       </div>
     </main>
     <footer>
