--- a/result.html
+++ b/result.html
@@ -12,14 +12,15 @@
       <!-- TODO load header partial here -->
     </header>
     <main>
-      <div class="intro">
+      <div class="intro frosted-overlay">
         <h1>Quiz Master</h1>
         <p>Quiz completed: here's how you did!</p>
         <div class="finalScore"><!--TODO display final score here--></div>
-      </div>
-      <div class="finalRedirection">
-        <button><a href="index.html">Home</a></button>
-        <!-- <button><a href="quiz.html">Try again!</a></button> -->
+
+        <div class="finalRedirection">
+          <button><a href="index.html">Home</a></button>
+          <!-- <button><a href="quiz.html">Try again!</a></button> -->
+        </div>
       </div>
     </main>
     <footer>
