--- a/index.html
+++ b/index.html
@@ -12,50 +12,50 @@
       <!-- TODO load header partial here -->
     </header>
     <main>
-      <div class="intro">
+      <div class="intro frosted-overlay">
         <h1>Quiz Master</h1>
         <p>Select the quiz category and difficulty level.</p>
+        <div class="quizSelections">
+          <form id="quiz-settings">
+            <label for="category"
+              >Category:
+              <select id="category" name="category">
+                <option value="">Any</option>
+                <option value="9">General Knowledge</option>
+                <option value="10">Books</option>
+                <option value="11">Film</option>
+                <option value="12">Music</option>
+                <option value="14">Televison</option>
+                <option value="15">Video Games</option>
+                <option value="17">Science & Nature</option>
+                <option value="18">Computers</option>
+                <option value="20">Mythology</option>
+                <option value="21">Sports</option>
+                <option value="22">Geography</option>
+                <option value="23">History</option>
+                <option value="25">Art</option>
+                <option value="27">Animals</option>
+                <option value="28">Vehicles</option>
+              </select>
+            </label>
+
+            <label for="difficulty"
+              >Difficulty:
+              <select id="difficulty" name="difficulty">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+              </select>
+            </label>
+
+            <button id="startQuizBtn" type="submit">Start Quiz</button>
+          </form>
+        </div>
+
+        <button>
+          <a href="/addQuestion.html" target="_blank">Add your own question</a>
+        </button>
       </div>
-      <div class="quizSelections">
-        <form id="quiz-settings">
-          <label for="category"
-            >Category:
-            <select id="category" name="category">
-              <option value="">Any</option>
-              <option value="9">General Knowledge</option>
-              <option value="10">Books</option>
-              <option value="11">Film</option>
-              <option value="12">Music</option>
-              <option value="14">Televison</option>
-              <option value="15">Video Games</option>
-              <option value="17">Science & Nature</option>
-              <option value="18">Computers</option>
-              <option value="20">Mythology</option>
-              <option value="21">Sports</option>
-              <option value="22">Geography</option>
-              <option value="23">History</option>
-              <option value="25">Art</option>
-              <option value="27">Animals</option>
-              <option value="28">Vehicles</option>
-            </select>
-          </label>
-
-          <label for="difficulty"
-            >Difficulty:
-            <select id="difficulty" name="difficulty">
-              <option value="easy">Easy</option>
-              <option value="medium">Medium</option>
-              <option value="hard">Hard</option>
-            </select>
-          </label>
-
-          <button id="startQuizBtn" type="submit">Start Quiz</button>
-        </form>
-      </div>
-
-      <button>
-        <a href="/addQuestion.html" target="_blank">Add your own question</a>
-      </button>
     </main>
     <footer>
       <!-- TODO load footer partial here -->
